<resources>
    <string name="app_name">Reddit Clone</string>
    <string name="splashText">Reddit Clone</string>
    <string name="logo_image_description">Reddit Clone Image</string>
    <string name="menu_homepage_name">Home page</string>
    <string name="floating_button_sort_post_by">Sort postResponse by</string>
    <string name="menu_user_register_name">Register</string>
    <string name="menu_user_login_name">Login</string>
    <string name="email_login_register_name">Email</string>
    <string name="password_login_register_name">Password</string>
    <string name="password_repeat_login_register_name">Repeat password</string>
    <string name="button_login_name">Login</string>
    <string name="button_cancel_name">Cancel</string>
    <string name="username_login_name">Username</string>
    <string name="display_name_register_name">Display name</string>
    <string name="button_upload_photo_name">Upload image</string>
    <string name="description_register_name">Description</string>
    <string name="button_register_name">Register</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the registerRequest in the experience.\n"
        "An emphasis on registerRequest actions makes core functionality immediately apparent and provides "
        "waypoints for the registerRequest.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the registerRequest as the prime mover. Primary registerRequest actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the registerRequest without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to registerRequest input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "registerRequest picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a registerRequest tries to pick up one of cards.\n\n"
    </string>
    <string name="post_comment_text_name">Write your comment here</string>
    <string name="join_to_this_community_button_name">Join to this community</string>
    <string name="view_community_posts_button_name">Show community posts</string>
    <string name="post_title_name">Post title</string>
    <string name="post_text_name">Post text</string>
    <string name="post_flairs_name">Post flairs</string>
    <string name="button_create_post_name">Create post</string>
    <string name="button_upload_post_images_name">Upload images</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_user_logout_name">Logout</string>
    <string name="menu_user_manage_name">Manage account</string>
    <string name="button_change_password_name">Change password</string>
    <string name="button_my_communities_name">My communities</string>
    <string name="button_save_name">Save changes</string>
    <string name="button_change_photo_name">Change</string>
    <string name="current_password_name">Current password</string>
    <string name="new_password_name">New password</string>
    <string name="repeat_new_password_name">Repeat new password</string>
    <string name="menu_create_community_name">Create community</string>
    <string name="community_name">Community name</string>
    <string name="community_description_name">Community description</string>
    <string name="community_rules_name">Community rules</string>
    <string name="community_flairs_name">Community flairs</string>
    <string name="button_create_community_name">Create community</string>
    <string name="menu_communities_name">Communities</string>
    <string name="button_review_reported_comments_name">Review reported comments</string>
    <string name="button_review_reported_posts_name">Review reported postResponses</string>
    <string name="button_review_blocked_users_name">Review blocked users</string>
    <string name="button_accept_reported_comments_name">Accept reports on selected comments</string>
    <string name="button_decline_reported_comments_name">Decline reports on selected comments</string>
    <string name="button_accept_reported_posts_name">Accept reports on selected postResponses</string>
    <string name="button_decline_reported_posts_name">Decline reports on selected postResponses</string>
    <string name="posting_new_posts_checkbox">Posting new images</string>
    <string name="posting_new_comments_checkbox">Posting new comments</string>
    <string name="reacting_new_posts_checkbox">Reacting to postResponses</string>
    <string name="reacting_new_comments_checkbox">Reacting to comments</string>
    <string name="button_report_user_name">Report registerRequest</string>
    <string name="reason_for_reporting_user_name">Reason of reporting registerRequest (optional)</string>
    <string name="menu_administrator_tools_name">Administrator tools</string>
    <string name="reason_for_suspending_community_name">Reason of suspending communityDTOResponse</string>
    <string name="button_block_user_name">Block</string>
    <string name="button_reject_user_name">Reject</string>
    <string name="username_login_register_name">Username</string>
    <string name="about_community_text">About community:</string>
    <string name="community_flairs_text">Community flairs:</string>
    <string name="community_rules_text">Community rules:</string>
    <string name="no_flairs_text">Not attached flairs yet</string>
    <string name="no_rules_text">Not attached rules yet</string>
    <string name="button_select_flairs">Select flairs</string>
    <string name="button_add_flair">Add flair</string>
    <string name="flair_name_text">Flair name</string>
    <string name="btn_save_text">Save</string>
    <string name="change_flairs_text">Change flairs</string>
    <string name="button_remove_photo_name">Remove</string>
    <string name="post_flairs_text">Flairs:</string>
    <string name="button_enable_fingerprint_name">Enable login with fingerprint sensor</string>
</resources>