<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/navigation_bar_item_homepage"
            android:icon="@drawable/ic_homepage"
            android:checked="true"
            android:title="@string/menu_homepage_name" />

        <item
            android:id="@+id/navigation_bar_item_user_register"
            android:icon="@drawable/ic_register"
            android:title="@string/menu_user_register_name" />

        <item
            android:id="@+id/navigation_bar_item_user_login"
            android:icon="@drawable/ic_login"
            android:title="@string/menu_user_login_name" />

        <item
            android:id="@+id/navigation_bar_item_user_manage"
            android:icon="@drawable/ic_user_manage"
            android:title="@string/menu_user_manage_name"
            android:visible="false"/>

        <item
            android:id="@+id/navigation_bar_item_user_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/menu_user_logout_name"
            android:visible="false"/>


    </group>

</menu>