<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:fontFamily="?android:fontFamily">

    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="25.0sp" android:layout_marginBottom="25.0sp" android:layout_marginStart="50.0sp" android:layout_marginEnd="50.0sp">

        <LinearLayout android:layout_width="fill_parent" android:layout_height="wrap_content">

            <ImageView
                android:layout_width="64.0dip"
                android:layout_height="64.0dip"
                android:layout_marginRight="10.0sp"
                android:src="@drawable/ic_avatar"
                android:contentDescription="@string/logo_image_description" />

            <com.google.android.material.button.MaterialButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_margin="7.0sp" android:text="@string/button_upload_photo_name" />

        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout android:paddingTop="20.0sp" android:paddingBottom="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/username_login_name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:paddingBottom="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/display_name_register_name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@id/textEmail" android:paddingBottom="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/email_login_register_name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:id="@id/textPassword" android:paddingBottom="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/password_login_register_name" app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="wrap_content"  android:inputType="textPassword" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout android:paddingBottom="20.0sp" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/description_register_name">

            <com.google.android.material.textfield.TextInputEditText android:layout_width="fill_parent" android:layout_height="80.0sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_register_name" />

        <com.google.android.material.button.MaterialButton android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/button_cancel_name" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>