<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="25.0sp"
        android:layout_marginBottom="25.0sp"
        android:layout_marginStart="50.0sp"
        android:layout_marginEnd="50.0sp">

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="20.0sp"
            android:paddingBottom="20.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/community_name"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingBottom="20.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_description_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/community_description"
                android:layout_width="fill_parent"
                android:layout_height="200sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingBottom="20.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/community_rules_name"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/community_rules"
                android:layout_width="fill_parent"
                android:layout_height="200sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_select_flairs"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_select_flairs" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_community"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_community_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_community"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_name"
            android:visibility="gone"/>

        <com.google.android.material.button.MaterialButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel_name" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>