<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <CheckBox
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="8sp"
            android:checked="true"
            android:text="@string/posting_new_posts_checkbox"/>

        <CheckBox
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="8sp"
            android:checked="false"
            android:text="@string/posting_new_comments_checkbox"/>

        <CheckBox
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="8sp"
            android:checked="true"
            android:text="@string/reacting_new_posts_checkbox"/>

        <CheckBox
            android:layout_width="200dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:layout_margin="8sp"
            android:checked="false"
            android:text="@string/reacting_new_comments_checkbox"/>

    </LinearLayout>

</FrameLayout>