<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:layout_marginTop="25.0sp"
        android:layout_marginBottom="25.0sp"
        android:layout_marginStart="50.0sp"
        android:layout_marginEnd="50.0sp">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Community">

            <AutoCompleteTextView
                android:id="@+id/postCommunities"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:text=""/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingTop="20.0sp"
            android:paddingBottom="20.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_title_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:paddingBottom="20.0sp"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/post_text_name">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/text"
                android:layout_width="fill_parent"
                android:layout_height="200sp" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/dateFilterContainer" style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="20.0sp"
            android:hint="Post Flairs">

            <AutoCompleteTextView
                android:id="@+id/datesFilterSpinner"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="none"
                tools:text="All Time"/>

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_upload_post_images_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_create_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_create_post_name" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_save_changes_post"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/button_save_name"
            android:visibility="gone"/>

    </LinearLayout>


</androidx.core.widget.NestedScrollView>